<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EligeSesion" >

    <TextView
        android:id="@+id/titulo"
        android:layout_width="322dp"
        android:layout_height="95dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/bienvenida"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton_inicio_invitado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_inicio_invitado"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/boton_inicio_iniciar_sesion" />

    <Button
        android:id="@+id/boton_inicio_registrarse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_inicio_registrarse"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/boton_inicio_iniciar_sesion"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/boton_inicio_iniciar_sesion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_main_iniciar_sesion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/boton_inicio_invitado"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/boton_inicio_registrarse" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="328dp"
        android:layout_height="141dp"
        android:gravity="center"
        android:text="@string/text_inicio_descripcion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/boton_inicio_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.442" />
</androidx.constraintlayout.widget.ConstraintLayout>